--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://editormilku.github/React-Weather-App",
   "name": "weather-app-starter",
   "version": "0.1.0",
   "private": true,
